--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,6 @@
 $primary-color: #3498db;
 $secondary-color: #2ecc71;
 $font-stack: 'Helvetica Neue', sans-serif;
+$font-size: 16px;
+$line-color: #333;
+$card-bg: #ff6922;
